--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,18 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}">
     {% block head %} {% endblock %}
 </head>
 <body>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#posts">Posts</a>
+        <a href="#statistics">Statistics</a>
+        <a href="#about">About</a>
+    </div> 
+
     {% block body %} {% endblock %}
+
 </body>
 </html>
