--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,20 @@
 {% extends 'base.html' %}
 
 {% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}"
 {% endblock %}
 
 {% block body %}
 
-<h1>Template</h1>
+<div class="main_container">
+ <h1>What troubles you?</h1>
+
+ <form>
+    <input type="text" id="input-title" placeholder="Title">
+    <textarea name="" type="text" id="input-message" placeholder="Text"></textarea>
+    <input type="submit" value="Submit" id="input-submit">
+ </form>
+
+</div>
 
 {% endblock %}
