--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,13 @@
     {% block head %} {% endblock %}
 </head>
 <body>
+
+    <style>
+        .main_container {
+            margin-top: 50px;
+        }
+    </style>
+
     {% set active_page = active_page|default('index') -%}
     <div class="topnav">
         <a {% if "index" == active_page %} class="active" {% endif %} href="index.html">Home</a>
@@ -16,7 +23,9 @@
         <a href="#about">About</a>
     </div> 
 
-    {% block body %} {% endblock %}
+    {% block body %}
+        
+    {% endblock %}
 
 </body>
 </html>
