--- a/static/css/index.css
+++ b/static/css/index.css
@@ -25,7 +25,8 @@ input:focus, textarea:focus {
 
 textarea {
    border-radius: 15px;
-   height: 300px !important;
+   min-height: 300px !important;
+   resize: vertical;
 }
   
 input, textarea {
