--- a/templates/posts.html
+++ b/templates/posts.html
@@ -35,7 +35,7 @@
 
                 <div class="me-too-container">
                     <a href="/incrementMeToo/{{post.id}}">
-                        <img class="me-too-symbol" src="static/raise.png" onclick="this.src='static/raised.png'"/>
+                        <img class="me-too-symbol" src="static/raise.png" onclick="this.src='static/raised.png'" onmouseover="this.src='static/raised.png'" onmouseout="this.src='static/raise.png'">
                     </a> 
                         <div class="me-toos"><p>{{post.MeTooCount}}</p></div> 
                 </div>               
