--- a/static/css/confirm.css
+++ b/static/css/confirm.css
@@ -61,7 +61,7 @@ h3 {
  #post-now {
     width: 100%;
     color: white;
-    background-color: #58cc0b; 
+    background-color: #20bf6b; 
     font-size: x-large;
     padding: 8px;
     margin: auto;
