--- a/templates/posts.html
+++ b/templates/posts.html
@@ -12,7 +12,7 @@
     
     <div class="list">
         {% for post in posts %}
-        <div class="card">
+        <div class="card" id="post{{post.id}}">
             <h3>{{post.Titel}}</h3>
             <a href="/deletePost/{{post.id}}"> 
                 DELETE
