--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -31,7 +31,7 @@
         {% endfor %}
         {% endif %}
         {% endfor %}
-        <form action="/addRelation/{{post.id}}" method="POST" class="tag_input" >
+        <form action="/addRelation/{{post.id}}" method="POST" class="tag_input_box" >
             <input class="tag_input" placeholder="Add a Tag" type="text" name="tagName" id="tagName">
             <input class="tag_plus" type="image" src="{{ url_for('static', filename='plus.png') }}">
         </form>
