New Ki and redirection from confirm to post

--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -39,7 +39,7 @@
     <form action="/deletePost/{{post.id}}">
         <input type="submit" value="Delete Post" id="discard"/>
     </form>
-    <form action="/">
+    <form action="/posts.html">
         <input type="submit" value="Post Now" id="post-now"/>
     </form>
 </div>
