--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -99,7 +99,7 @@
       </style>
       
       <div class="main-cards">
-        <div class="card">
+        <div class="cardBarGraph">
 
           <div class="center">
             <h3>What's been on your mind these past few weeks?</h3>
@@ -117,6 +117,18 @@
             {% endfor %}
 
             <style>
+
+              .cardBarGraph{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 100%;
+                background-color: #e3e4e6;
+                margin-bottom: 20px;
+                -webkit-column-break-inside: avoid;
+                padding: 24px;
+                box-sizing: border-box;
+              }
 
               .h3{
                 margin: 0;
