--- a/static/css/posts.css
+++ b/static/css/posts.css
@@ -10,6 +10,40 @@ h3 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
   
+.tools-sidebar {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    right: 5px;
+    top: 0px;
+    z-index: 999999;
+    padding: 0;
+}
+
+#search-icon {
+    position: fixed;
+    width: 32px;
+    height: 32px;
+    margin-left: 15px;
+    top: 8px;
+    right: 8px;
+}
+
+#input-search-tag {
+    top: 7px;
+    right: 50px;
+    position: fixed;
+    border-radius: 15px;
+    color: #2c3e50;
+    box-sizing: border-box;
+    padding: 10px;
+     max-width: 600px;
+     font-family: sans-serif;
+     border-color: #7f8c8d5e;
+     border-width: 0px;
+     margin-top: 0px;
+}
+
 .list {
     max-width: 600px;
     margin-top: 0px;
