--- a/templates/posts.html
+++ b/templates/posts.html
@@ -9,7 +9,13 @@
 {% block body %}
 
 <div class="main_container"> 
-    
+    <div class="tools-sidebar">
+        <form action="/searchByTag" method="POST">
+            <input type="text" id="input-search-tag" name="input-search-tag" placeholder="Search Term"/>
+            <input type="image" id="search-icon" alt="Search" src="{{ url_for('static', filename='search.png') }}"/>
+        </form>
+    </div>
+
     <div class="list">
         {% for post in posts %}
         <div class="card" id="post{{post.id}}">
